--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container1">
     <form>
       Value 1 <input type="text" id="value1">
       Value 2 <input type="text" id="value2">
@@ -25,6 +25,8 @@
       <button type="button" onclick="calc()">Calculate</button>
     </form>
     <hr>
+  </div>
+  <div class="container2">
     <div id="result"></div>
   </div>
 </body>
